foo.txt
gcc ./src/*.c ./src/blackrock/*.c ./src/utils/*.c -I ./include/ -l pthread -l sqlite3 -D CERVER_DEBUG -D DEBUG -o ./bin/server
In file included from ./include/game.h:4:0,
                 from ./src/cerver.c:15:
./include/cerver.h:310:16: warning: useless storage class specifier in empty declaration
 typedef struct GameSettings;
                ^~~~~~~~~~~~
./include/cerver.h:319:56: error: unknown type name ‘Lobby’
 extern void *createLobbyPacket (PacketType packetType, Lobby *lobby, size_t packetSize);
                                                        ^~~~~
./include/cerver.h:329:5: error: unknown type name ‘GameSettings’
     GameSettings settings;      // 24/10/2018 -- we dont have any ptr in this struct
     ^~~~~~~~~~~~
In file included from ./include/game.h:4:0,
                 from ./src/game.c:11:
./include/cerver.h:310:16: warning: useless storage class specifier in empty declaration
 typedef struct GameSettings;
                ^~~~~~~~~~~~
./include/cerver.h:319:56: error: unknown type name ‘Lobby’
 extern void *createLobbyPacket (PacketType packetType, Lobby *lobby, size_t packetSize);
                                                        ^~~~~
./include/cerver.h:329:5: error: unknown type name ‘GameSettings’
     GameSettings settings;      // 24/10/2018 -- we dont have any ptr in this struct
     ^~~~~~~~~~~~
./src/game.c: In function ‘joinLobby’:
./src/game.c:675:24: warning: implicit declaration of function ‘createLobbyPacket’ [-Wimplicit-function-declaration]
         void *packet = createLobbyPacket (LOBBY_UPDATE, lobby, packetSize);
                        ^~~~~~~~~~~~~~~~~
./src/game.c:675:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
./src/game.c: In function ‘leaveLobby’:
./src/game.c:749:33: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
             void *lobbyPacket = createLobbyPacket (LOBBY_UPDATE, lobby, packetSize);
                                 ^~~~~~~~~~~~~~~~~
In file included from ./include/cerver.h:8:0,
                 from ./src/main.c:7:
./include/game.h:28:2: error: unknown type name ‘u8’
  u8 playerTimeout;  // in seconds.
  ^~
./include/game.h:29:2: error: unknown type name ‘u8’
  u8 fps;
  ^~
./include/game.h:31:2: error: unknown type name ‘u8’
  u8 minPlayers;
  ^~
./include/game.h:32:2: error: unknown type name ‘u8’
  u8 maxPlayers;
  ^~
./include/game.h:41:5: error: unknown type name ‘u8’
     u8 x, y;
     ^~
./include/game.h:90:2: error: unknown type name ‘Client’
  Client *client;  // client network data associated to this player
  ^~~~~~
./include/game.h:96:2: error: unknown type name ‘u32’
  u32 inputSequenceNum;
  ^~~
./include/game.h:108:5: error: unknown type name ‘u8’
     u8 levelNum;
     ^~
./include/game.h:135:5: error: unknown type name ‘u16’
     u16 players_nfds;                           // n of active fds in the pollfd array
     ^~~
./include/game.h:137:5: error: unknown type name ‘u32’
     u32 pollTimeout;
     ^~~
./include/game.h:145:38: error: unknown type name ‘PacketInfo’
 extern void gameServer_handlePacket (PacketInfo *packet);
                                      ^~~~~~~~~~
./include/game.h:147:30: error: unknown type name ‘GameServerData’
 extern void game_initLobbys (GameServerData *gameData, u8 n_lobbys);
                              ^~~~~~~~~~~~~~
./include/game.h:147:56: error: unknown type name ‘u8’
 extern void game_initLobbys (GameServerData *gameData, u8 n_lobbys);
                                                        ^~
./include/game.h:148:31: error: unknown type name ‘GameServerData’
 extern void game_initPlayers (GameServerData *gameData, u8 n_players);
                               ^~~~~~~~~~~~~~
./include/game.h:148:57: error: unknown type name ‘u8’
 extern void game_initPlayers (GameServerData *gameData, u8 n_players);
                                                         ^~
./include/game.h:156:5: error: unknown type name ‘Server’
     Server *server;
     ^~~~~~
In file included from ./src/main.c:7:0:
./include/cerver.h:310:16: warning: empty declaration with storage class specifier does not redeclare tag
 typedef struct GameSettings;
                ^~~~~~~~~~~~
In file included from ./include/game.h:4:0,
                 from ./src/blackrock/blackrock.c:11:
./include/cerver.h:310:16: warning: useless storage class specifier in empty declaration
 typedef struct GameSettings;
                ^~~~~~~~~~~~
./include/cerver.h:319:56: error: unknown type name ‘Lobby’
 extern void *createLobbyPacket (PacketType packetType, Lobby *lobby, size_t packetSize);
                                                        ^~~~~
./include/cerver.h:329:5: error: unknown type name ‘GameSettings’
     GameSettings settings;      // 24/10/2018 -- we dont have any ptr in this struct
     ^~~~~~~~~~~~
In file included from ./include/game.h:4:0,
                 from ./src/utils/list.c:256:
./include/cerver.h:310:16: warning: useless storage class specifier in empty declaration
 typedef struct GameSettings;
                ^~~~~~~~~~~~
./include/cerver.h:319:56: error: unknown type name ‘Lobby’
 extern void *createLobbyPacket (PacketType packetType, Lobby *lobby, size_t packetSize);
                                                        ^~~~~
./include/cerver.h:329:5: error: unknown type name ‘GameSettings’
     GameSettings settings;      // 24/10/2018 -- we dont have any ptr in this struct
     ^~~~~~~~~~~~
In file included from ./include/cerver.h:8:0,
                 from ./include/utils/log.h:6,
                 from ./src/utils/log.c:6:
./include/game.h:28:2: error: unknown type name ‘u8’
  u8 playerTimeout;  // in seconds.
  ^~
./include/game.h:29:2: error: unknown type name ‘u8’
  u8 fps;
  ^~
./include/game.h:31:2: error: unknown type name ‘u8’
  u8 minPlayers;
  ^~
./include/game.h:32:2: error: unknown type name ‘u8’
  u8 maxPlayers;
  ^~
./include/game.h:41:5: error: unknown type name ‘u8’
     u8 x, y;
     ^~
./include/game.h:90:2: error: unknown type name ‘Client’
  Client *client;  // client network data associated to this player
  ^~~~~~
./include/game.h:96:2: error: unknown type name ‘u32’
  u32 inputSequenceNum;
  ^~~
./include/game.h:108:5: error: unknown type name ‘u8’
     u8 levelNum;
     ^~
./include/game.h:135:5: error: unknown type name ‘u16’
     u16 players_nfds;                           // n of active fds in the pollfd array
     ^~~
./include/game.h:137:5: error: unknown type name ‘u32’
     u32 pollTimeout;
     ^~~
./include/game.h:145:38: error: unknown type name ‘PacketInfo’
 extern void gameServer_handlePacket (PacketInfo *packet);
                                      ^~~~~~~~~~
./include/game.h:147:30: error: unknown type name ‘GameServerData’
 extern void game_initLobbys (GameServerData *gameData, u8 n_lobbys);
                              ^~~~~~~~~~~~~~
./include/game.h:147:56: error: unknown type name ‘u8’
 extern void game_initLobbys (GameServerData *gameData, u8 n_lobbys);
                                                        ^~
./include/game.h:148:31: error: unknown type name ‘GameServerData’
 extern void game_initPlayers (GameServerData *gameData, u8 n_players);
                               ^~~~~~~~~~~~~~
./include/game.h:148:57: error: unknown type name ‘u8’
 extern void game_initPlayers (GameServerData *gameData, u8 n_players);
                                                         ^~
./include/game.h:156:5: error: unknown type name ‘Server’
     Server *server;
     ^~~~~~
In file included from ./include/utils/log.h:6:0,
                 from ./src/utils/log.c:6:
./include/cerver.h:310:16: warning: empty declaration with storage class specifier does not redeclare tag
 typedef struct GameSettings;
                ^~~~~~~~~~~~
makefile:14: recipe for target 'server' failed
make: *** [server] Error 1
